# tulip

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CMakeMacros.cmake  CMakeSettings.json  CPackComponents.cmake  CPackInstaller.cmake  CPackOptions.cmake  ChangeLog  FindFTGL.cmake  FindGLEW.cmake  FindQtX.cmake  FindQuaZip.cmake  FindSIP.cmake  FindTULIP.cmake  FindTULIP3.cmake  FindXML2.cmake  INSTALL  INSTALL.linux  INSTALL.mac  INSTALL.win  Makefile.am  NEWS  README  README.md  TODO  Tulip2to3.txt  TulipUseFile.cmake  Tulip_Dev_Team.asc  UploadPPA.cmake  UseTulip.cmake  UseTulipPlugins.cmake  VersionInfo.in  VersionResource.rc  WriteEnvStr.nsh  acinclude.m4  appveyor.yml  (+29 more)
dataset_test/: CMakeLists.txt  main.cpp
demos/clique_import/: CMakeLists.txt  cliqueimport.cpp  cliqueimport.h
demos/graph_display/: CMakeLists.txt  graph_display.cpp  graph_display.h  main.cpp
demos/graph_manipulations/: CMakeLists.txt  graphmanipulations.cpp
demos/interactor_plugin/: CMakeLists.txt  interactor_plugin.cpp  interactor_plugin.h  interactor_plugin_resource.qrc
doc/: CMakeLists.txt
doc/developer/: CMakeLists.txt  conf.py.in  doc_guides.rst  genSphinxDoc.cmake  graph_format.rst  index.rst  installation.rst  installation_unix.rst  installation_win.rst  plugin_development.rst  tulip_lib.rst  tulip_libogl.txt  tulip_svn_cmake_qtcreator.txt  tulip_tutorial.rst
doc/doxygen/: CMakeLists.txt  doxygen_groups.h  tulip.doxyfile.in
doc/python/: CMakeLists.txt  SphinxConfig.cmake  apichanges.rst  apireference.rst  conf.py  conf.py.in  creatingvisualizations.rst  genSphinxDoc.cmake  gen_plugins_doc.py  gettingstarted.rst  graphalgorithms.rst  graphdatastorage.rst  graphmanipulation.rst  graphobservation.rst  graphvisualattributes.rst  index.rst  manual.rst  pythonplugins.rst  tabulate.py  tulipguireference.rst  tulipoglreference.rst  tulippluginsdocumentation.rst  tulippluginsreference.rst  tulipreference.rst
doc/user/: CMakeLists.txt  Makefile  algorithm.rst  conf.py.in  functions.rst  gui.rst  index.rst  plugins_management.rst  tutorial_beginner.rst  tutorial_intermediate.rst  workspace.rst
docs/: CMakeLists.txt  Makefile.am  README  gen-profile.sh  gen-tulipqhp.sh  make_tulip_doc_tarball.sh.in  tulip.qhcp  tulip.qhcp.in
docs/common/: CMakeLists.txt  CatalogManager.properties  gen-index.sh  tulip-default.css  tulip-doxygen.css  tulip-html.xsl  tulip-keywords.xsl  tulip-pdf.xsl  tulip-profile.xsl  tulip-toc.xsl
docs/devTeamDoxygen/: Makefile.am  footer.html.in  general  general-html  header.html.in  tulip.html.in
docs/developerHandbook/: CMakeLists.txt  Makefile.am  doc_guides.docbook  gen-devPdf.sh.in  graph_format.docbook  index.docbook  intro_install.docbook  plugins.docbook  prog_guides.docbook  tulip_lib.docbook  tulip_libogl.docbook  tulip_libqt.docbook
docs/doxygen/: CMakeLists.txt  Makefile.am  dox-html.xsl  dox-html.xsl.in  dox-keywords.xsl  dox-plugins.xsl  dox-profile.xsl  dox-toc.xsl  footer.html.in  gen-allPlugins.sh  general  general-man  header-allPlugins.html.in  header.html.in  tulip-lib.doxygen.in  tulip-plugins.doxygen.in  tulip.html.in
docs/python/: CMakeLists.txt  SphinxConfig.cmake  apireference.rst  conf.py  creatingvisualizations.rst  genSphinxDoc.cmake  gettingstarted.rst  graphalgorithms.rst  graphdatastorage.rst  graphmanipulation.rst  graphvisualattributes.rst  index.rst  manual.rst  pythonplugins.rst  tulipguireference.rst  tulipoglreference.rst  tulippluginsreference.rst  tulipreference.rst
docs/userHandbook/: CMakeLists.txt  Makefile.am  algorithms.docbook  functions.docbook  gen-userPdf.sh.in  graph_interface.docbook  index.docbook  plugins_management.docbook  subgraphs.docbook  tutorial_advanced.docbook  tutorial_beginner.docbook  tutorials.docbook
examples/: CMakeLists.txt
examples/controllerpluginexample/: ControllerPluginExample.cpp  ControllerPluginExample.h  Makefile
examples/glutviewer/: CMakeLists.txt  INSTALL  Makefile  glutviewer.cpp
examples/interactorpluginexample/: InteractorPluginExample.cpp  InteractorPluginExample.h  InteractorPluginRessources.qrc  Makefile
examples/qtviewer/: INSTALL  Makefile  mainwindow.cpp  mainwindow.h  qtviewer.cpp
examples/viewpluginexample/: Makefile  ViewPluginExample.cpp  ViewPluginExample.h
externalplugins/: CMakeLists.txt  FindTULIP.cmake  FindTULIP3.cmake
externalplugins/planeclustering/: Makefile  PlaneClustering.cpp  PlaneClustering.h
externalplugins/rectangleclustering/: ArityRecClustering.cpp  ArityRecClustering.h  AritySegmentRecClustering.cpp  AritySegmentRecClustering.h  Makefile  SegmentRecClustering.cpp  SegmentRecClustering.h  TableArity.h  TableAritySegment.h  TableSegment.h
plugins/: CMakeLists.txt  Makefile.am  mainpage.dox
plugins/clustering/: CMakeLists.txt  CliqueEnumeration.cpp  CliqueEnumeration.h  ConvolutionClustering.cpp  ConvolutionClustering.h  ConvolutionClusteringSetup.cpp  ConvolutionClusteringSetup.h  ConvolutionClusteringSetup.ui  EqualValueClustering.cpp  EqualValueClustering.h  HierarchicalClustering.cpp  HierarchicalClustering.h  Makefile.am  QuotientClustering.cpp  QuotientClustering.h  StrengthClustering.cpp  StrengthClustering.h
plugins/colors/: CMakeLists.txt  ColorMapping.cpp  DoubleStringsListRelationDialog.cpp  DoubleStringsListRelationDialog.h  DoubleStringsListRelationDialog.ui  EnumColorValuesMapping.cpp  Makefile.am  MetricMapping.cpp
plugins/controller/: CMakeLists.txt  MainControllerMacro.cpp
plugins/export/: CMakeLists.txt  CSVExport.cpp  CSVExport.h  GMLExport.cpp  Makefile.am
plugins/general/: CMakeLists.txt
plugins/glyph/: CMakeLists.txt  ConeGlyph.cpp  CrossGlyph.cpp  CubeGlyph.cpp  CylinderGlyph.cpp  DiamondGlyph.cpp  HexagonGlyph.cpp  Makefile.am  PentagonGlyph.cpp  RingGlyph.cpp  RoundedBoxGlyph.cpp  SphereGlyph.cpp  SquareGlyph.cpp  StarGlyph.cpp  billboard.cpp  christmastree.cpp  circle.cpp  cone.cpp  cross.cpp  cube.cpp  cylinder.cpp  (+19 more)
software/: CMakeLists.txt  Makefile.am
tests/: CMakeLists.txt
textures/: CMakeLists.txt  Makefile.am
unit_test/: CMakeLists.txt  FindCppUnit.cmake
(+2708 files in other folders)
